# mmind5

./: Cargo.toml  README.md
src/: gameplay.rs  lib.rs  main.rs  pattern.rs  solver.rs
